2004-10-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/download/index.html: add SUSE 2.0, 2.2

	* scripts/format-page.py: restrict eval with {}. 

	* site/about/automated-engraving/typography-features.html: add
	ledger lines example.

	* site/images/computer-totaal.jpeg (Module): new file.

	* site/about/thanks.html (Module): mention devel team.

	* site/images/sarabande.png (Module): 2.3 version.

	* site/switch/advantages.html (Module): revise

	* site/about/pubs.html (href): add computer totaal scan. (Thanks,
	Mars!)

	* site/graphics/: new directory. Edit SVG images with inkscape
	0.39

2004-10-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/download/index.html: change path to fedora-3

2004-10-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/index.html: add uwaterloo mirror link.

2004-09-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/about/index.html: Comment-out text/plain notice.

2004-09-11  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* site/about/faq.html (Han-Wen): update answers regarding latex.

2004-09-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/download/windows.html: Do not blame the user.  Do not use
	don't etc.

	* site/index.html: It's September already.

2004-09-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/download/windows.html (href): Typo.

2004-09-02  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* site/download/windows.html (href): trimmed w98 note, and move to
	bottom.

2004-09-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/about/pubs.html (href): Add Dave Phillips articles.

2004-09-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/index.html: Spell LilyPond as LilyPond.

2004-08-26  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* site/switch/testimonials.html: add Orm's quote
	(href): continue with tour link.

	* site/switch/howto.html: language fix.

	* site/download/index.html: use & characters.

2004-08-03  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scripts/big-page.py: take directory as argument.

	* big-page.py: move to scripts/