@@ -24,7 +24,7 @@ This example shows chord names, drum notation and tablature in action.
 Note the polyphonic notation for the horn section, and note how the
 chords (The "Em7" and "Hm7" printed at the top) use Danish chord
 names. The latter simply is a layout option.  By switching back a
-toggle, you can print normal American chord names.
+toggle, you can print English chord names.
 <p>
 
 <h3>Classical music</h3>
